--- a/Proyecto pagina web/html/index.html
+++ b/Proyecto pagina web/html/index.html
@@ -135,22 +135,15 @@
         <footer class="footer margen-interno">
             <nav class="pie">
                 📍 Visítanos:
-                <p>Frente al Ayuntamiento de Cambita Garabitos, San Cristóbal, República Dominicana</p>
+                <p>en San Cristóbal, República Dominicana</p>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <hr>
                 <span>Desarrollado por:</span> 
-                <br>
-                <p>
-                Eliner Santos Guzman 20-EISM-1-008 
-                <br>
-                Kelvin Sanchez D. 20-EISM-1-002 
-                <br>
-                Marcos Antonio Isabel Segura 17-EISM-1-027
-                <br>
-                Marysol Brito Leónidas 20-EISM-1-031
-                </p>
-
-                Universidad Dominicana O&M
-
-                <a href="#"></a>
+                <a href="https://www.linkedin.com/in/kelvin-sanchez-8724b2208/"> Kelvin Sanchez D.</a>
             </nav>
         </footer>
     </div>
